--- a/src/main/resources/FXML/Login.fxml
+++ b/src/main/resources/FXML/Login.fxml
@@ -1,46 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" prefWidth="1000" prefHeight="600" styleClass="root">
+<AnchorPane prefHeight="600" prefWidth="1000"
+            stylesheets="@../CSS/login.css"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            fx:controller="ui.controllers.LoginController"
+            xmlns:fx="http://javafx.com/fxml/1">
 
-    <HBox prefWidth="1000" prefHeight="600">
-        <!-- Vùng logo bên trái -->
-        <VBox alignment="CENTER" prefWidth="400" styleClass="left-card">
-            <ImageView fitWidth="180" fitHeight="180" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@../IMG/logo_1.png"/>
-                </image>
-            </ImageView>
+    <!-- Nền cam phủ toàn màn hình -->
+    <Rectangle height="600" styleClass="background" width="1000" />
 
-            <Label text="CRABKING" styleClass="logo-title"/>
-            <Label text="RESTAURANT" styleClass="logo-sub"/>
-            <Button text="Hệ thống nhà hàng CrabKing" styleClass="sub-button"/>
-        </VBox>
+    <!-- Bên trái: logo CrabKing -->
+    <VBox alignment="CENTER" layoutX="0" layoutY="0" prefHeight="600" prefWidth="450" spacing="20" styleClass="left-pane">
+        <ImageView fitHeight="451.0" fitWidth="668.0" preserveRatio="true">
+            <image>
+                <Image url="@../IMG/logo_1.png" />
+            </image>
+        </ImageView>
+    </VBox>
 
-        <!-- Vùng đăng nhập bên phải -->
-        <VBox alignment="CENTER_LEFT" prefWidth="600" spacing="20" styleClass="right-card">
-            <padding><Insets left="70" right="70"/></padding>
+    <!-- Bên phải: form đăng nhập -->
+    <VBox alignment="TOP_CENTER" layoutX="450" layoutY="0" prefHeight="600" prefWidth="550" spacing="25" styleClass="right-pane">
+       <HBox spacing="10" style="-fx-padding: 10;">
+           <Label styleClass="title-text" text="🦀 CrabKing - Login" />
+           <Region HBox.hgrow="ALWAYS" />
+           <Button fx:id="minimizeBtn" onAction="#minimize" styleClass="control-btn" text="−" />
+           <Button fx:id="closeBtn" onAction="#close" styleClass="control-btn" text="✕" />
 
-            <Label text="ĐĂNG NHẬP" styleClass="title"/>
+       </HBox>
 
-            <VBox spacing="10" style="-fx-pref-width: 400;">
-                <Label text="Tên đăng nhập"/>
-                <TextField promptText="Nhập tên đăng nhập" styleClass="input"/>
-            </VBox>
+        <!-- Tiêu đề to trên cùng -->
+        <Label prefHeight="99.0" prefWidth="293.0" styleClass="title" text="ĐĂNG NHẬP" />
+      <HBox prefHeight="206.0" prefWidth="550.0">
+         <children>
 
-            <VBox spacing="10" style="-fx-pref-width: 400;">
-                <Label text="Mật khẩu"/>
-                <PasswordField promptText="Nhập mật khẩu" styleClass="input"/>
-            </VBox>
+             <AnchorPane prefHeight="155.0" prefWidth="115.0" />
+      
+              <!-- Form -->
+              <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="316.0" spacing="15">
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                      <children>
+                          <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                              <image>
+                                  <Image url="@../IMG/icon/user.png" />
+                              </image>
+                          </ImageView>
 
-            <Hyperlink text="Quên mật khẩu?" styleClass="forgot-link"/>
+                          <VBox prefHeight="78.0" prefWidth="332.0">
+                              <children>
+                                  <Label styleClass="labeltt" text="Tên đăng nhập" />
+                                  <TextField fx:id="usernameField" prefHeight="34.0" prefWidth="143.0" promptText="Nhập tên đăng nhập" styleClass="input-field" />
+                              </children>
+                          </VBox>
+                      </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                  <children>
+                      <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                          <image>
+                              <Image url="@../IMG/icon/locked-computer.png" />
+                          </image>
+                      </ImageView>
+                     <VBox prefHeight="78.0" prefWidth="331.0">
+                        <children>
+                              <Label styleClass="labeltt" text="Mật khẩu" />
+                              <PasswordField fx:id="passwordField" promptText="Nhập mật khẩu" styleClass="input-field" />
+                        </children>
+                     </VBox>
+                  </children>
+               </HBox>
+               <HBox prefHeight="33.0" prefWidth="313.0">
+                  <children>
+                     <AnchorPane prefHeight="26.0" prefWidth="193.0" />
 
-            <Button text="Đăng nhập" styleClass="login-btn"/>
-        </VBox>
-    </HBox>
+                        <Hyperlink fx:id="forgotLink" onAction="#forgotPassword" styleClass="forgot-link" text="Quên mật khẩu?" />
+                  </children>
+               </HBox>
+              </VBox>
+            <AnchorPane prefHeight="155.0" prefWidth="129.0" />
+         </children>
+      </HBox>
+
+        <!-- Nút đăng nhập -->
+        <Button fx:id="loginBtn" onAction="#login"  prefWidth="121.0" styleClass="login-btn" text="Đăng nhập" />
+    </VBox>
 </AnchorPane>
