--- a/src/main/resources/FXML/sidebar_QL.fxml
+++ b/src/main/resources/FXML/sidebar_QL.fxml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" styleClass="sidebar" stylesheets="@../CSS/sidebar_QL.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="sidebar" prefHeight="1000" prefWidth="322.0" styleClass="sidebar" stylesheets="@../CSS/sidebar_QL.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <HBox prefHeight="100.0" prefWidth="334.0" styleClass="avatar_section">
+      <children>
+            <ImageView fitHeight="115" fitWidth="115" preserveRatio="true">
+                <image>
+                    <Image url="@../IMG/avatar.png" />
+                </image>
+            </ImageView>
+      
+          <!-- Phần avatar + thông tin -->
+          <VBox alignment="CENTER">
+              <children>
+                  <Label styleClass="username" text="Đỗ Minh Quân" />
+                  <Label styleClass="role" text="Quản Lí" />
+              </children>
+          </VBox>
+      </children>
+   </HBox>
 
-    <padding>
-        <Insets bottom="20" left="12" right="12" top="20" />
-    </padding>
-   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+    <!-- Nút menu -->
+    <Button styleClass="menu-item" text="  ⚙  DASHBOARD" />
+    <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ MENU" />
+    <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ BÀN" />
+    <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ NHÂN VIÊN" />
+    <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ KHUYẾN MÃI" />
+    <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ CHÍNH SÁCH" />
+    <Button styleClass="menu-item" text="  ⚙  THỐNG KÊ" />
+    <Button styleClass="menu-item" text="  ⚙  HỖ TRỢ" />
 
-    <Label styleClass="sidebar-name" text="Đỗ Minh Quân" />
-    <Label styleClass="sidebar-role" text="Quản lí" />
+    <Region prefHeight="70.0" prefWidth="319.0" />
 
-    <Button onAction="#handleDashboard" styleClass="sidebar-btn" text="DASHBOARD" />
-    <Button onAction="#handleMenu" styleClass="sidebar-btn" text="QUẢN LÍ MENU" />
-    <Button onAction="#handleTable" styleClass="sidebar-btn" text="QUẢN LÍ BÀN" />
-    <Button onAction="#handleStaff" styleClass="sidebar-btn" text="QUẢN LÍ NHÂN VIÊN" />
-    <Button styleClass="sidebar-btn" text="KHUYẾN MÃI" />
-    <Button styleClass="sidebar-btn" text="CHÍNH SÁCH" />
-    <Button styleClass="sidebar-btn" text="THỐNG KÊ" />
-    <Button styleClass="sidebar-btn" text="HỖ TRỢ" />
-
-    <Region VBox.vgrow="ALWAYS" />
-
-    <Button onAction="#handleLogout" styleClass="logout-btn" text="Đăng Xuất" />
+    <!-- Đăng xuất -->
+    <Button prefWidth="185.0" styleClass="logout-btn" text="Đăng Xuất" />
 </VBox>
