--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -14,7 +14,9 @@
 <BorderPane stylesheets="@../CSS/dashboard.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Sidebar -->
-
+    <left>
+        <fx:include source="sidebar_QL.fxml" />
+    </left>
 
     <!-- Main Content -->
     <center>
