--- a/src/main/resources/CSS/dashboard.css
+++ b/src/main/resources/CSS/dashboard.css
@@ -15,6 +15,11 @@
     -fx-padding: 8;
 }
 
+.info-label{
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+}
+
 .card {
     -fx-background-color: white;
     -fx-padding: 12;
@@ -37,9 +42,10 @@
 }
 
 .small-btn {
-    -fx-background-color: #3b82f6;
+    -fx-background-color: black;
     -fx-text-fill: white;
-    -fx-font-size: 12px;
+    -fx-font-size: 10px;
+    -fx-font-weight: bold;
     -fx-padding: 5 10;
     -fx-background-radius: 6;
 }
