--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.paint.ImagePattern?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.ImagePattern?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
 
-<BorderPane stylesheets="@../CSS/dashboard.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="1000.0" prefWidth="1600.0" stylesheets="@../CSS/dashboard.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Sidebar -->
     <left>
@@ -35,26 +35,26 @@
 
                 <!-- Thông tin nhân viên -->
                 <HBox prefHeight="270.0" prefWidth="695.0" spacing="16" styleClass="info-card">
-               <VBox prefHeight="200.0" prefWidth="100.0">
-                   <StackPane alignment="CENTER">
-                       <Circle radius="100" fill="#f0f0f0" stroke="#cccccc" strokeWidth="3"/>
-                       <Rectangle width="190" height="190" arcWidth="190" arcHeight="190">
-                           <fill>
-                               <ImagePattern>
-                                   <image>
-                                       <Image url="@../IMG/avatar.png" />
-                                   </image>
-                               </ImagePattern>
-                           </fill>
-                       </Rectangle>
-                   </StackPane>
+                    <VBox prefHeight="200.0" prefWidth="100.0">
+                        <StackPane alignment="CENTER">
+                            <Circle fill="#f0f0f0" radius="100" stroke="#cccccc" strokeWidth="3" />
+                            <Rectangle arcHeight="190" arcWidth="190" height="190" width="190">
+                                <fill>
+                                    <ImagePattern>
+                                        <image>
+                                            <Image url="@../IMG/avatar.png" />
+                                        </image>
+                                    </ImagePattern>
+                                </fill>
+                            </Rectangle>
+                        </StackPane>
 
-               </VBox>
+                    </VBox>
                     <VBox prefHeight="260.0" prefWidth="481.0" spacing="6" styleClass="employee-info">
                         <Label styleClass="info-label" text="Mã Nhân Viên: NV0002">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin></Label>
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin></Label>
                         <Label styleClass="info-label" text="Họ Và Tên: Đỗ Minh Quân" />
                         <Label styleClass="info-label" text="SĐT: 0968685253" />
                         <Label styleClass="info-label" text="Chức Vụ: Quản Lý" />
