--- a/src/main/resources/FXML/Login.fxml
+++ b/src/main/resources/FXML/Login.fxml
@@ -13,11 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="600" prefWidth="1000"
-            stylesheets="@../CSS/login.css"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            fx:controller="ui.controllers.LoginController"
-            xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="600" prefWidth="1000" stylesheets="@../CSS/login.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.LoginController">
 
     <!-- Nền cam phủ toàn màn hình -->
     <Rectangle height="600" styleClass="background" width="1000" />
@@ -30,70 +26,176 @@
             </image>
         </ImageView>
     </VBox>
+   <VBox layoutX="451.0" prefHeight="600.0" prefWidth="549.0">
+      <children>
+          <HBox spacing="10" style="-fx-padding: 10;">
+              <Label styleClass="title-text" text="🦀 CrabKing - Login" />
+              <Region HBox.hgrow="ALWAYS" />
+              <Button fx:id="minimizeBtn" onAction="#minimize" styleClass="control-btn" text="−" />
+              <Button fx:id="closeBtn" onAction="#close" styleClass="control-btn" text="✕" />
 
-    <!-- Bên phải: form đăng nhập -->
-    <VBox alignment="TOP_CENTER" layoutX="450" layoutY="0" prefHeight="600" prefWidth="550" spacing="25" styleClass="right-pane">
-       <HBox spacing="10" style="-fx-padding: 10;">
-           <Label styleClass="title-text" text="🦀 CrabKing - Login" />
-           <Region HBox.hgrow="ALWAYS" />
-           <Button fx:id="minimizeBtn" onAction="#minimize" styleClass="control-btn" text="−" />
-           <Button fx:id="closeBtn" onAction="#close" styleClass="control-btn" text="✕" />
+                   </HBox>
+         <AnchorPane prefHeight="52.0" prefWidth="549.0" />
 
-       </HBox>
+                <!-- Bên phải: form đăng nhập -->
+          <!-- ========== TRANG 1: ĐĂNG NHẬP ========== -->
+          <VBox fx:id="loginPane" alignment="TOP_CENTER" layoutX="450" layoutY="0" managed="true" prefHeight="600" prefWidth="550" spacing="25" styleClass="right-pane" visible="true">
 
-        <!-- Tiêu đề to trên cùng -->
-        <Label prefHeight="99.0" prefWidth="293.0" styleClass="title" text="ĐĂNG NHẬP" />
-      <HBox prefHeight="206.0" prefWidth="550.0">
-         <children>
+              <!-- Tiêu đề -->
+              <Label prefHeight="99.0" prefWidth="293.0" styleClass="title" text="ĐĂNG NHẬP" />
 
-             <AnchorPane prefHeight="155.0" prefWidth="115.0" />
-      
-              <!-- Form -->
-              <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="316.0" spacing="15">
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
-                      <children>
-                          <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
-                              <image>
-                                  <Image url="@../IMG/icon/user.png" />
-                              </image>
-                          </ImageView>
+              <!-- Khối form -->
+              <HBox prefHeight="206.0" prefWidth="550.0">
+                  <children>
+                      <AnchorPane prefHeight="155.0" prefWidth="115.0" />
+                      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="316.0" spacing="15">
 
-                          <VBox prefHeight="78.0" prefWidth="332.0">
+                          <!-- Tên đăng nhập -->
+                          <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
                               <children>
-                                  <Label styleClass="labeltt" text="Tên đăng nhập" />
-                                  <TextField fx:id="usernameField" prefHeight="34.0" prefWidth="143.0" promptText="Nhập tên đăng nhập" styleClass="input-field" />
+                                  <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                                      <image><Image url="@../IMG/icon/user.png" /></image>
+                                  </ImageView>
+                                  <VBox prefHeight="51.0" prefWidth="262.0">
+                                      <children>
+                                          <Label styleClass="labeltt" text="Tên đăng nhập" />
+                                          <TextField fx:id="usernameField" prefHeight="31.0" prefWidth="262.0" promptText="Nhập tên đăng nhập" styleClass="input-field" />
+                                      </children>
+                                  </VBox>
                               </children>
-                          </VBox>
-                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
-                  <children>
-                      <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
-                          <image>
-                              <Image url="@../IMG/icon/locked-computer.png" />
-                          </image>
-                      </ImageView>
-                     <VBox prefHeight="78.0" prefWidth="331.0">
-                        <children>
-                              <Label styleClass="labeltt" text="Mật khẩu" />
-                              <PasswordField fx:id="passwordField" promptText="Nhập mật khẩu" styleClass="input-field" />
-                        </children>
-                     </VBox>
-                  </children>
-               </HBox>
-               <HBox prefHeight="33.0" prefWidth="313.0">
-                  <children>
-                     <AnchorPane prefHeight="26.0" prefWidth="193.0" />
+                          </HBox>
 
-                        <Hyperlink fx:id="forgotLink" onAction="#forgotPassword" styleClass="forgot-link" text="Quên mật khẩu?" />
-                  </children>
-               </HBox>
-              </VBox>
-            <AnchorPane prefHeight="155.0" prefWidth="129.0" />
-         </children>
-      </HBox>
+                          <!-- Mật khẩu -->
+                          <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                              <children>
+                                  <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                                      <image><Image url="@../IMG/icon/locked-computer.png" /></image>
+                                  </ImageView>
+                                  <VBox prefHeight="78.0" prefWidth="331.0">
+                                      <children>
+                                          <Label styleClass="labeltt" text="Mật khẩu" />
+                                          <PasswordField fx:id="passwordField" promptText="Nhập mật khẩu" styleClass="input-field" />
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
 
-        <!-- Nút đăng nhập -->
-        <Button fx:id="loginBtn" onAction="#login"  prefWidth="121.0" styleClass="login-btn" text="Đăng nhập" />
-    </VBox>
+                          <!-- Quên mật khẩu -->
+                          <HBox prefHeight="33.0" prefWidth="313.0">
+                              <children>
+                                  <AnchorPane prefHeight="26.0" prefWidth="193.0" />
+                                  <Hyperlink fx:id="forgotLink" onAction="#showForgot" styleClass="forgot-link" text="Quên mật khẩu?" />
+                              </children>
+                          </HBox>
+                      </VBox>
+                      <AnchorPane prefHeight="155.0" prefWidth="129.0" />
+                  </children>
+              </HBox>
+
+              <!-- Nút đăng nhập -->
+              <Button fx:id="loginBtn" onAction="#login" prefWidth="121.0" styleClass="login-btn" text="Đăng nhập" />
+          </VBox>
+
+
+          <!-- ========== TRANG 2: QUÊN MẬT KHẨU ========== -->
+          <VBox fx:id="forgotPane" alignment="TOP_CENTER" layoutX="450" layoutY="0" managed="false" prefHeight="600" prefWidth="550" spacing="25" styleClass="right-pane" visible="false">
+
+              <Label prefHeight="128.0" prefWidth="412.0" styleClass="title" text="QUÊN MẬT KHẨU" textAlignment="CENTER" />
+
+              <HBox prefHeight="206.0" prefWidth="550.0">
+                  <children>
+                      <AnchorPane prefHeight="155.0" prefWidth="115.0" />
+                      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="316.0" spacing="15">
+
+                          <!-- Số điện thoại -->
+                          <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                              <children>
+                                  <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                                      <image><Image url="@../IMG/icon/phone.png" /></image>
+                                  </ImageView>
+                                  <VBox prefHeight="51.0" prefWidth="262.0">
+                                      <children>
+                                          <Label styleClass="labeltt" text="Số Điện Thoại Xác Minh" />
+                                          <TextField fx:id="sdtField" prefHeight="31.0" prefWidth="262.0" promptText="Nhập số điện thoại" styleClass="input-field" />
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
+
+                          <!-- Mã xác thực -->
+                          <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                              <children>
+                                  <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                                      <image><Image url="@../IMG/icon/code.png" /></image>
+                                  </ImageView>
+                                  <VBox prefHeight="78.0" prefWidth="331.0">
+                                      <children>
+                                          <Label styleClass="labeltt" text="Mã Xác Minh" />
+                                          <TextField fx:id="otpField" promptText="Nhập mã xác minh" styleClass="input-field" />
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
+                      </VBox>
+                      <AnchorPane prefHeight="155.0" prefWidth="129.0" />
+                  </children>
+              </HBox>
+
+              <HBox spacing="10">
+               <AnchorPane prefHeight="167.0" prefWidth="130.0" />
+                  <Button onAction="#showLogin" prefWidth="125.0" styleClass="login-btn" text="Quay lại" />
+                  <Button onAction="#showReset" prefWidth="125.0" styleClass="login-btn" text="Kiểm tra" />
+               <AnchorPane prefHeight="167.0" prefWidth="115.0" />
+              </HBox>
+          </VBox>
+
+
+          <!-- ========== TRANG 3: ĐỔI MẬT KHẨU ========== -->
+          <VBox fx:id="resetPane" alignment="TOP_CENTER" layoutX="450" layoutY="0" managed="false" prefHeight="600" prefWidth="550" spacing="25" styleClass="right-pane" visible="false">
+
+              <Label prefHeight="128.0" prefWidth="371.0" styleClass="title" text="ĐỔI MẬT KHẨU" />
+
+              <HBox prefHeight="206.0" prefWidth="550.0">
+                  <children>
+                      <AnchorPane prefHeight="155.0" prefWidth="115.0" />
+                      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="316.0" spacing="15">
+
+                          <!-- Mật khẩu mới -->
+                          <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                              <children>
+                                  <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                                      <image><Image url="@../IMG/icon/locked-computer.png" /></image>
+                                  </ImageView>
+                                  <VBox prefHeight="51.0" prefWidth="262.0">
+                                      <children>
+                                          <Label prefHeight="30.0" prefWidth="111.0" styleClass="labeltt" text="Mật khẩu mới" />
+                                          <PasswordField fx:id="newPassField" prefHeight="31.0" prefWidth="262.0" promptText="Nhập mật khẩu mới" styleClass="input-field" />
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
+
+                          <!-- Xác nhận mật khẩu -->
+                          <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10">
+                              <children>
+                                  <ImageView fitHeight="40" fitWidth="40" preserveRatio="true">
+                                      <image><Image url="@../IMG/icon/locked-computer.png" /></image>
+                                  </ImageView>
+                                  <VBox prefHeight="78.0" prefWidth="331.0">
+                                      <children>
+                                          <Label prefHeight="32.0" prefWidth="152.0" styleClass="labeltt" text="Xác nhận mật khẩu" />
+                                          <PasswordField fx:id="confirmPassField" promptText="Nhập lại mật khẩu" styleClass="input-field" />
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
+                      </VBox>
+                      <AnchorPane prefHeight="155.0" prefWidth="129.0" />
+                  </children>
+              </HBox>
+
+              <Button onAction="#resetDone" prefWidth="121.0" styleClass="login-btn" text="Xác nhận đổi" />
+          </VBox>
+      </children>
+   </VBox>
 </AnchorPane>
